feat: enhance comment and friend request functionalities